// file: proto/gcommon/v1/organization/api/notification_frequency.proto
// version: 1.0.0
// guid: 49798a1d-bd35-44a3-bcdc-4e5d2bfaa330

edition = "2023";

package gcommon.v1.organization.api;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/gcommon/v1/organization/messages";

message NotificationFrequency {
  // Daily digest enabled
  bool daily_digest = 1;

  // Weekly summary enabled
  bool weekly_summary = 2;

  // Instant notifications enabled
  bool instant_notifications = 3;

  // Quiet hours start time (24-hour format, e.g., "22:00")
  string quiet_hours_start = 4;

  // Quiet hours end time (24-hour format, e.g., "08:00")
  string quiet_hours_end = 5;
}
